Fix bug with svgs shrinking on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -185,7 +185,7 @@ svg {
 
 .login-with-google-btn > svg,
 .ratings-btn > svg {
-  width: 1.5rem;
+  min-width: 1.5rem;
   height: 1.5rem;
 }
 
